src/objects/Fleet_Asset_Aggregate__c/Fleet_Asset_Aggregate__c.object-meta.xml
<CustomObject>
    <label>Fleet  Asset  Aggregate</label>
    <nameField>
        <displayFormat>FA-{0}</displayFormat>
        <label>Fleet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Asset Aggregate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>