src/objects/Fleet_Asset_Aggregate__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account (Customer) Name associated with this Fleet entry.</inlineHelpText>
    <label>Account Name</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Account Status should not be inactive and Account Name should not contain Various</errorMessage>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <filterItems>
            <field>Account.Report_Account_Name_upper__c</field>
            <operation>contains</operation>
            <value>VARIOUS</value>
        </filterItems>
        <infoMessage>Account Status should not be inactive and Account Name should not contain &quot;Various&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fleet Asset Aggregate</relationshipLabel>
    <relationshipName>Fleet_Asset_Aggregate</relationshipName>
    <type>Lookup</type>
</CustomField>