src/objects/Fleet_Asset_Aggregate__c/fields/Altimeter__c.field-meta.xml
<CustomField>
    <fullName>Altimeter__c</fullName>
    <label>Radar Altimeter</label>
    <length>225</length>
    <type>Text</type>
</CustomField>