src/objects/Fleet_Asset_Aggregate__c/fields/BGA_Contract__c.field-meta.xml
<CustomField>
    <fullName>BGA_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for SR#433112</description>
    <label>BGA Contract</label>
    <type>Checkbox</type>
</CustomField>