src/objects/Fleet_Asset_Aggregate__c/fields/CBT__c.field-meta.xml
<CustomField>
    <fullName>CBT__c</fullName>
    <formula>TEXT( Account_Name__r.CBT__c )</formula>
    <label>CBT</label>
    <type>Text</type>
</CustomField>