src/objects/Fleet_Asset_Aggregate__c/fields/Engine_Position_1_S_N__c.field-meta.xml
<CustomField>
    <fullName>Engine_Position_1_S_N__c</fullName>
    <label>Engine Position 1 S/N</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>