src/objects/Fleet_Asset_Aggregate__c/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <formula>TEXT( Account_Name__r.Market_Name__c )</formula>
    <label>Market Name</label>
    <type>Text</type>
</CustomField>