src/objects/Fleet_Asset_Aggregate__c/fields/Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Platform Name for the current Fleet entry.</inlineHelpText>
    <label>Platform Name</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Fleet Asset Aggregate</relationshipLabel>
    <relationshipName>Fleet_Asset_Aggregate</relationshipName>
    <type>Lookup</type>
</CustomField>